# chess-vision

./: .gitignore  CLAUDE.md  README.md  corners.json  pyproject.toml  requirements.txt
chess_vision/: cli.py  config.py
chess_vision/board/: auto_corners.py  detect.py  squares.py  warp.py
chess_vision/calibration/: capture.py  label.py  profile.py
chess_vision/game/: move_scorer.py  moves.py  pgn.py  pixel_moves.py  rules.py  state.py
chess_vision/inference/: camera.py  classify.py  onnx_runtime.py  yolo_detect.py
chess_vision/models/: export.py  occupancy.py  piece.py
chess_vision/training/: augment.py  dataset.py  finetune.py  train.py
config/: default.yaml
data/: README.md
models/: README.md  piece_classes.json
notebooks/: train_colab.ipynb
profiles/: example.yaml
scripts/: collect_data.py  debug_live.py  download_data.py  list_games.py  process_chessred.py  record_game.py  test_camera.py  train_combined.py  train_optimized.py  visualize_board.py
tests/: conftest.py  test_board_detect.py  test_calibration.py  test_classify.py  test_move_scorer.py  test_moves.py  test_occupancy_model.py  test_pgn.py  test_piece_model.py  test_rules.py  test_squares.py  test_training.py  test_warp.py
